Fix responsive button spacing on login page

--- a/css/login.css
+++ b/css/login.css
@@ -21,6 +21,11 @@ hr
     margin: auto;
 }
 
+.margin-bottom-plus
+{
+    margin-bottom: 10px;
+}
+
 .logo
 {
     margin-bottom: 36px;
